# niri-utils

./: CHANGELOG.md  CONTRIBUTING.md  PKGBUILD  README.md  SECURITY.md  install.sh
docs/: DEVELOPMENT.md  INSTALL.md  NIRI_IDLE.md  NIRI_LOCK.md  README.md
niri-idle/: Cargo.toml
niri-idle/src/: config.rs  main.rs
niri-lock/: config.ini  lock.sh  style.css
